--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,152 +1,277 @@
+/*Direct style for nav tag*/
+
++ {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 nav {
-  top:0;
-  left: 0;
-  width: 100%;
-  color: #2E3956;
-  height: 80px;
-  z-index: 1000;
-  margin-top: 0;
-  position: fixed;
-  padding-top: 0px;
-  background:#2E3956;
-  transition: all 0.6s cubic-bezier(0.7 , 0.01 , 0.3 ,1);
+    top: 0;
+    left: 0;
+    width: 100%;
+    color: #fff;
+    height: 80px;
+    z-index: 1000;
+    margin-top: 0;
+    position: fixed;
+    padding-top: 0px;
+    background: none;
+    transition: all 0.6s cubic-bezier(0.7, 0.01, 0.3, 1);
 }
-.logo,.menu{
-  position: absolute;
-  z-index: 2000;
+
+
+/*Javascript style toggle for menu appear and desappear*/
+
+.header-in {
+    background-color: rgba(247, 182, 23, 0.81);
 }
-.logo{
-  left: :0;
-  top:-4px;
-  width: 70px;
-  height: 74px;
-  padding: 0.4% 2%;
-  text-align: left;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-image: url(../img/laboratoria.svg);
+
+
+/**/
+
+
+/*Navgation general styles*/
+
+
+/*Background Menu*/
+
+nav .nav-background {
+    top: 0px;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1500;
+    display: table;
+    background: none;
+    position: absolute;
+    transition: background-color 0.6s cubic-bezier(0.7, 0.01, 0.3, 1);
 }
+
+nav.open .nav-background {
+    opacity: 1;
+    background-color: rgba(247, 182, 23, 0.81) !important;
+    transition: background-color 0.6s cubic-bezier(0.7, 0.01, 0.3, 1);
+}
+
+nav.open {
+    height: 100%;
+    transition: none;
+    -o-transition: none;
+    -moz-transition: none;
+    -webkit-transition: none;
+}
+
+
+/*Navigation list*/
+
+nav ul {
+    top: -10%;
+    padding: 0;
+    opacity: 0;
+    width: 100%;
+    text-align: center;
+    visibility: hidden;
+    display: table-cell;
+    vertical-align: middle;
+    transform: perspective(600px) rotateX(10deg);
+    transition: all 0.5s cubic-bezier(0.7, 0, 0.36, 0.63);
+}
+
+nav ul li {
+    visibility: hidden;
+}
+
+nav ul li a {
+    color: white;
+    width: 100%;
+    display: block;
+    padding: 8px 0 0;
+    letter-spacing: -0.06em;
+}
+
+nav ul li a:hover {
+    color: #f7b617;
+    background-color: white;
+}
+
+nav.open ul {
+    top: 0;
+    opacity: 1;
+    margin-top: 0;
+    visibility: visible;
+    transform: perspective(600px) rotateX(0deg);
+}
+
+nav.open ul li {
+    color: #fff;
+    font-size: 60px;
+    visibility: visible !important;
+}
+
+
+/*Menu bar logo and menu styles general*/
+
+
+/*Logo*/
+
+.logo, .menu {
+    position: absolute;
+    z-index: 2000;
+}
+
+.logo {
+    left: 15px;
+    top: -4px;
+    width: 70px;
+    height: 74px;
+    padding: 0.4% 3%;
+    text-align: left;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-image: url(./img/icon/laboratoria.svg);
+}
+
+.open .logo, nav.solid #logo .logo {
+    background-image: url(./img/icon/laboratoria.svg);
+}
+
+.logo img {
+    z-index: 2000;
+}
+
+
 /*Hamburger*/
-a .menu{
-  top:0;
-  right:0;
-  height: 7px;
-  width: 45px;
-  text-align:right;
-  margin: 2rem 2rem;
-  background: #E1464B;
-  transition: all 0.4s;
+
+.menu {
+    top: 0;
+    right: 0;
+    height: 4px;
+    width: 24px;
+    text-align: right;
+    margin: 2rem 2rem;
+    background: #f7b617;
+    transition: all 0.3s;
 }
-.menu:before{
-  top: -12px;
+
+.menu:before {
+    top: -8px;
 }
-.menu:after{
-  top: 12px;
+
+.menu:after {
+    top: 8px;
 }
-.menu:hover:before {
-  top: -15px;
+
+#toggle:hover:before {
+    top: -9px;
 }
-.menu:hover:after {
-  top: 15px;
+
+#toggle:hover:after {
+    top: 9px;
 }
-.menu:before,
-.menu:after{
-  content: '';
-  width: 45px;
-  height: 7px;
-  z-index: -1;
-  display: block;
-  position: absolute;
-  background: #E1464B;
-  transition: all 0.4s;
+
+.menu:before, .menu:after {
+    content: '';
+    width: 24px;
+    height: 4px;
+    z-index: -1;
+    display: block;
+    position: absolute;
+    background: #f7b617;
+    transition: all 0.3s;
 }
+
 #toggle:hover {
-  transition: top 0.1s;
+    transition: top 0.4s;
 }
 
-.open .menu{
-  background: none !important;
+
+/*Javascript style toggle for menu appear and desappear style background*/
+
+.solid #toggle .menu {
+    background: #fff;
 }
 
-.open .menu:after{
-top:0 !important;
-background: #fff !important ;
-transform: rotate(45deg);
+.solid #toggle .menu:after {
+    background-color: #fff;
+}
+
+.solid #toggle .menu:before {
+    background-color: #fff;
+}
+
+
+/*Javascript style toggle for menu hamburger appear and desappear*/
+
+.open .menu {
+    background: none !important;
+}
+
+.open .menu:after {
+    top: 0 !important;
+    background: #fff !important;
+    transform: rotate(45deg);
 }
 
 .open .menu:before {
-  top:0 !important ;
-  background: #fff !important ;
-  transform: rotate(-45deg);
+    top: 0 !important;
+    background: #fff !important;
+    transform: rotate(-45deg);
 }
 
-nav .nav-background{
-  top:0px;
-  opacity: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1500;
-  display: table;
-  background: none;
-  position: absolute;
-  transition: background-color 0.6s cubic-bezier(0.7 , 0.01 , 0.3 ,1);
+
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+
+.box {
+    width: 400px;
+    list-style: none;
+    display: inline-block;
+    border: 0;
+    margin: 0px;
 }
 
-nav .open .nav-background{
-  opacity: 1;
-  background-color: rgba(217, 40, 130, 0.9) !important;
-  transition: background-color 0.6s cubic-bezier(0.7,0.01,0.3,1);
-
+.grid {
+    display: inline-block;
+    background-color: #f6feda;
+    border: 0;
+    margin: 0px;
 }
 
-nav .open{
-  height: 100%;
-  transition: none;
-  -o-transition: none;
-  -moz-transition:none;
-  -webkit-transition:none;
+figure {
+    margin: 0;
 }
 
-nav ul{
-  top: -10%;
-  padding: 0;
-  opacity: 0;
-  width: 100% ;
-  text-align: center;
-  visibility: hidden;
-  display: table-cell;
-  vertical-align: middle;
-  transform: perspective(600px) rotateX(10deg);
-  transition: all 0.5s cubic-bezier(0.7 ,0,0.36,0.63);
-}
-nav ul li{
-  visibility: hidden;
-}
-nav ul li a {
-  color: white;
-  width: 100%;
-  display: block;
-  padding: 8px 0 0;
-  letter-spacing: -0.06em;
+.img-box {
+    width: 400px;
+    height: 400px;
+    border: 0;
+    margin: 0px;
 }
 
-nav ul li a :hover{
-  color: #ec008c;
-  background-color: white;
+
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+
+.grid:hover img {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    opacity: 0.7;
 }
 
-nav .open ul{
-  top:0;
-  opacity: 1;
-  margin-top: 0;
-  visibility: visible;
-  transform: perspective(600px) rotateX(0deg);
-}
-nav .open ul li {
-  color:#fff;
-  font-size: 60px;
-  visibility: visible !important;
+
+/**************************************************************/
+
+.text {
+    font-size: 40px;
+    opacity: 0;
+    color: white;
+    position: absolute;
+    z-index: 2;
+    margin-left: -15%;
+    margin-top: 10%;
+    transition: 0.4s;
 }
 
-/*END HAMBURGUER*/
+.box-image:hover .text {
+    opacity: 1;
+}
