--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 /*Direct style for nav tag*/
 
-+ {
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -228,24 +228,39 @@ nav.open ul li {
     display: inline-block;
     border: 0;
     margin: 0px;
+    position: relative;
+    line-height: 0;
+
+
 }
 
 .grid {
     display: inline-block;
     background-color: #f6feda;
     border: 0;
+    position: relative;
+    overflow: hidden;
     margin: 0px;
+
+
+
 }
 
 figure {
     margin: 0;
+    overflow: hidden;
 }
 
 .img-box {
     width: 400px;
+    transition: all 0.3s;
     height: 400px;
     border: 0;
     margin: 0px;
+
+}
+figure:hover{
+  background-color: yellow;
 }
 
 
@@ -255,23 +270,31 @@ figure {
     -moz-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
-    opacity: 0.7;
-}
+    opacity: 0.5;
+    transition: 0.3s;
 
+}
+.grid:hover .text {
+  font-size: 40px;
+  opacity: 1;
+  color: white;
+  position: absolute;
+  z-index: 2;
+  margin-left: -15%;
+  margin-top: 10%;
+  transition: 0.4s;
+}
 
 /**************************************************************/
 
 .text {
     font-size: 40px;
+    font-size: 10px;
     opacity: 0;
     color: white;
     position: absolute;
     z-index: 2;
-    margin-left: -15%;
-    margin-top: 10%;
+    top: 35%;
+    left: 40%;
     transition: 0.4s;
-}
-
-.box-image:hover .text {
-    opacity: 1;
 }
