--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -284,11 +284,17 @@ figure:hover{
   margin-top: 10%;
   transition: 0.4s;
 }
-
+section{
+  background-color: black;
+  height: 280px;
+  margin-top: 0;
+  padding: 0;
+  left: 0;
+}
 /**************************************************************/
 
 .text {
-    font-size: 40px;
+    line-height: 1;
     font-size: 10px;
     opacity: 0;
     color: white;
