--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,11 +129,11 @@ nav.open ul li {
     text-align: left;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    background-image: url(./img/icon/laboratoria.svg);
+    background-image: url(../img/laboratoria.svg);
 }
 
 .open .logo, nav.solid #logo .logo {
-    background-image: url(./img/icon/laboratoria.svg);
+    background-image: url(../img/laboratoria.svg);
 }
 
 .logo img {
@@ -230,8 +230,6 @@ nav.open ul li {
     margin: 0px;
     position: relative;
     line-height: 0;
-
-
 }
 
 .grid {
@@ -239,11 +237,8 @@ nav.open ul li {
     background-color: #f6feda;
     border: 0;
     position: relative;
-    overflow: hidden;
+    /*overflow: hidden;*/
     margin: 0px;
-
-
-
 }
 
 figure {
@@ -257,10 +252,10 @@ figure {
     height: 400px;
     border: 0;
     margin: 0px;
-
 }
-figure:hover{
-  background-color: yellow;
+
+figure:hover {
+    background-color: yellow;
 }
 
 
@@ -272,25 +267,28 @@ figure:hover{
     transform: scale(1.1);
     opacity: 0.5;
     transition: 0.3s;
+}
 
-}
 .grid:hover .text {
-  font-size: 40px;
-  opacity: 1;
-  color: white;
-  position: absolute;
-  z-index: 2;
-  margin-left: -15%;
-  margin-top: 10%;
-  transition: 0.4s;
+    font-size: 40px;
+    opacity: 1;
+    color: white;
+    position: absolute;
+    z-index: 2;
+    margin-left: -15%;
+    margin-top: 10%;
+    transition: 0.4s;
 }
-section{
-  background-color: black;
-  height: 280px;
-  margin-top: 0;
-  padding: 0;
-  left: 0;
+
+section {
+    background-color: black;
+    height: 280px;
+    margin-top: 0;
+    padding: 0;
+    left: 0;
 }
+
+
 /**************************************************************/
 
 .text {
@@ -301,6 +299,46 @@ section{
     position: absolute;
     z-index: 2;
     top: 35%;
-    left: 40%;
+    left: 35%;
     transition: 0.4s;
+    text-align: center;
+}
+
+
+/*****************************************************/
+
+.escribe h1 {
+    font-size: 40px;
+    overflow: hidden;
+       border-right: .2em solid orange;
+    white-space: nowrap;
+    top: 100px;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    animation: read 5s steps(50)infinite alternate;
+    blink-caret .75s step-end infinite alternate;
+
+}
+.intro{
+  padding: 60px;
+}
+.escribe {
+  padding-top: 60px;
+}
+@keyframes read {
+    from {
+        width: 0%
+    }
+    to {
+        width: 100%
+    }
+}
+
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent
+    }
+    50% {
+        border-color: orange;
+    }
 }
